--- a/index.html
+++ b/index.html
@@ -341,24 +341,29 @@ function selectFolder(folder) {
 
 
 function applyFilters() {
-  // Filter catalog based on current idol and category filters
+  // Filter catalog for thumbnails
   filteredCatalog = catalog.filter(item => {
     if (currentIdolFilter && item.folder !== currentIdolFilter) return false;
     if (currentCategoryFilter && item.category !== currentCategoryFilter) return false;
     return true;
   });
 
-  // Calculate available idols and categories based on filteredCatalog
-  const availableIdols = [...new Set(filteredCatalog.map(it => it.folder))].sort();
-  const availableCategories = [...new Set(filteredCatalog.map(it => it.category).filter(Boolean))].sort();
+  // Update buttons lists with shrinking
+  const idolsToShow = currentCategoryFilter
+    ? [...new Set(catalog.filter(it => it.category === currentCategoryFilter).map(it => it.folder))]
+    : null;
 
-  // Re-render buttons with only the available options
-  renderIdolButtons(availableIdols);
-  renderCategoryButtons(availableCategories);
+  const categoriesToShow = currentIdolFilter
+    ? [...new Set(catalog.filter(it => it.folder === currentIdolFilter).map(it => it.category).filter(Boolean))]
+    : null;
 
-  // Render thumbnails
+  renderIdolButtons(idolsToShow);
+  renderCategoryButtons(categoriesToShow);
+
+  // Render catalog thumbnails
   renderCatalogThumbnails();
 }
+
 
 
 function renderCatalogThumbnails() {
@@ -409,8 +414,8 @@ overlay.addEventListener("click", () => {
 
 function renderIdolButtons(list = null) {
   idolButtonsEl.innerHTML = "";
-  const names = list || [...new Set(catalog.map(it => it.folder))];
-  names.forEach(name => {
+  const names = list ? [...new Set(list)] : [...new Set(catalog.map(it => it.folder))];
+  names.sort().forEach(name => {
     const btn = document.createElement("button");
     btn.className = "idol-btn";
     btn.textContent = name;
@@ -440,8 +445,8 @@ function toggleCatalogIdol(folderName, btn) {
 
 function renderCategoryButtons(list = null) {
   categoryPanel.innerHTML = "";
-  const cats = list || [...new Set(catalog.map(it => it.category).filter(Boolean))];
-  cats.forEach(cat => {
+  const cats = list ? [...new Set(list).filter(Boolean)] : [...new Set(catalog.map(it => it.category).filter(Boolean))];
+  cats.sort().forEach(cat => {
     const btn = document.createElement("button");
     btn.className = "category-btn";
     btn.textContent = cat;
@@ -453,6 +458,7 @@ function renderCategoryButtons(list = null) {
     categoryPanel.appendChild(btn);
   });
 }
+
 
 
 function toggleCategoryFilter(cat, btn) {
