--- a/index.html
+++ b/index.html
@@ -349,29 +349,20 @@ function applyFilters() {
     return true;
   });
 
-  // Determine buttons to show, taking search term into account
-  const term = searchInput.value.trim().toLowerCase();
-  
-  let pool = catalog.filter(item => {
-    if (currentIdolFilter && item.folder !== currentIdolFilter) return false;
-    if (currentCategoryFilter && item.category !== currentCategoryFilter) return false;
-    if (term && !item.folder.toLowerCase().includes(term)) return false;
-    return true;
-  });
-  
-  let idolsForButtons = [...new Set(pool.map(it => it.folder))].sort();
-  let categoriesForButtons = [...new Set(pool.map(it => it.category).filter(Boolean))].sort();
-  
-  // Apply asymmetric shrinking
-  if (firstSelection === "idol" && currentIdolFilter) {
-    categoriesForButtons = [...new Set(pool.filter(it => it.folder === currentIdolFilter)
-                                          .map(it => it.category)
-                                          .filter(Boolean))].sort();
-  } else if (firstSelection === "category" && currentCategoryFilter) {
-    idolsForButtons = [...new Set(pool.filter(it => it.category === currentCategoryFilter)
-                                      .map(it => it.folder))].sort();
-  }
+  // Determine buttons to show
+  let idolsForButtons = [...new Set(catalog.map(it => it.folder))].sort();
+  let categoriesForButtons = [...new Set(catalog.map(it => it.category).filter(Boolean))].sort();
 
+  if (firstSelection === "idol" && currentIdolFilter) {
+    // Shrink category list to only categories for selected idol
+    categoriesForButtons = [...new Set(catalog.filter(it => it.folder === currentIdolFilter)
+                                             .map(it => it.category)
+                                             .filter(Boolean))].sort();
+  } else if (firstSelection === "category" && currentCategoryFilter) {
+    // Shrink idol list to only idols for selected category
+    idolsForButtons = [...new Set(catalog.filter(it => it.category === currentCategoryFilter)
+                                         .map(it => it.folder))].sort();
+  }
 
   renderIdolButtons(idolsForButtons);
   renderCategoryButtons(categoriesForButtons);
