--- a/index.html
+++ b/index.html
@@ -341,11 +341,14 @@ function selectFolder(folder) {
 }
 
 
-function applyFilters() {
-  // Filter catalog based on current idol and category filters
+function applyFilters(term = "") {
+  term = term.trim().toLowerCase();
+
+  // Filter catalog based on current idol/category filters AND optional search term
   filteredCatalog = catalog.filter(item => {
     if (currentIdolFilter && item.folder !== currentIdolFilter) return false;
     if (currentCategoryFilter && item.category !== currentCategoryFilter) return false;
+    if (term && !item.folder.toLowerCase().includes(term)) return false;
     return true;
   });
 
@@ -354,14 +357,18 @@ function applyFilters() {
   let categoriesForButtons = [...new Set(catalog.map(it => it.category).filter(Boolean))].sort();
 
   if (firstSelection === "idol" && currentIdolFilter) {
-    // Shrink category list to only categories for selected idol
     categoriesForButtons = [...new Set(catalog.filter(it => it.folder === currentIdolFilter)
-                                             .map(it => it.category)
-                                             .filter(Boolean))].sort();
+                                         .map(it => it.category)
+                                         .filter(Boolean))].sort();
   } else if (firstSelection === "category" && currentCategoryFilter) {
-    // Shrink idol list to only idols for selected category
     idolsForButtons = [...new Set(catalog.filter(it => it.category === currentCategoryFilter)
                                          .map(it => it.folder))].sort();
+  }
+
+  // If search term is active, shrink buttons to only those in filtered catalog
+  if (term) {
+    idolsForButtons = [...new Set(filteredCatalog.map(it => it.folder))].sort();
+    categoriesForButtons = [...new Set(filteredCatalog.map(it => it.category).filter(Boolean))].sort();
   }
 
   renderIdolButtons(idolsForButtons);
@@ -487,10 +494,8 @@ document.addEventListener("click", (e) => {
 
 function applySearch(term) {
   term = term.trim().toLowerCase();
-  if (!term) {
-    applyFilters(); // reset to current idol/category filters
-    return;
-  }
+  applyFilters(term); // now filters by idol, category, and search term all together
+}
 
   // Filter catalog based on current filters AND search term
   filteredCatalog = catalog.filter(item => {
