--- a/index.html
+++ b/index.html
@@ -342,40 +342,31 @@ function selectFolder(folder) {
 
 
 function applyFilters() {
-  const searchTerm = searchInput.value.trim().toLowerCase();
-  const idolFilter = currentIdolFilter ? currentIdolFilter.toLowerCase() : "";
-  const hasSearch = !!searchTerm;
-  const hasIdol = !!idolFilter;
-  const hasCat = !!currentCategoryFilter;
-
-  // Filter catalog: search term + idol + category
-  filteredCatalog = catalog.filter(it => {
-    const matchSearch = !hasSearch || it.folder.toLowerCase().includes(searchTerm);
-    const matchIdol = !hasIdol || it.folder.toLowerCase().includes(idolFilter);
-    const matchCat = !hasCat || (it.category && it.category.toLowerCase() === currentCategoryFilter?.toLowerCase());
-    return matchSearch && matchIdol && matchCat;
+  // Filter catalog based on current idol and category filters
+  filteredCatalog = catalog.filter(item => {
+    if (currentIdolFilter && item.folder !== currentIdolFilter) return false;
+    if (currentCategoryFilter && item.category !== currentCategoryFilter) return false;
+    return true;
   });
 
-  renderCatalogThumbnails();
+  // Determine buttons to show
+  let idolsForButtons = [...new Set(catalog.map(it => it.folder))].sort();
+  let categoriesForButtons = [...new Set(catalog.map(it => it.category).filter(Boolean))].sort();
 
-  // Update category buttons dynamically if searching without other filters
-  if (hasSearch && !hasIdol && !hasCat) {
-    const searchCats = categories.filter(cat =>
-      catalog.some(it =>
-        it.category === cat &&
-        it.folder.toLowerCase().includes(searchTerm)
-      )
-    );
-    renderCategoryButtons(searchCats);
-  } else {
-    // normal category rendering
-    const availableCats = [...new Set(filteredCatalog.map(it => it.category).filter(Boolean))].sort();
-    renderCategoryButtons(availableCats);
+  if (firstSelection === "idol" && currentIdolFilter) {
+    // Shrink category list to only categories for selected idol
+    categoriesForButtons = [...new Set(catalog.filter(it => it.folder === currentIdolFilter)
+                                             .map(it => it.category)
+                                             .filter(Boolean))].sort();
+  } else if (firstSelection === "category" && currentCategoryFilter) {
+    // Shrink idol list to only idols for selected category
+    idolsForButtons = [...new Set(catalog.filter(it => it.category === currentCategoryFilter)
+                                         .map(it => it.folder))].sort();
   }
 
-  // Update idol buttons
-  const availableIdols = [...new Set(filteredCatalog.map(it => it.folder))].sort();
-  renderIdolButtons(availableIdols);
+  renderIdolButtons(idolsForButtons);
+  renderCategoryButtons(categoriesForButtons);
+  renderCatalogThumbnails();
 }
 
 
@@ -470,24 +461,21 @@ function renderCategoryButtons(list = null) {
   });
 }
 
-// Show suggestions while typing and apply filters
-searchInput.addEventListener("input", () => {
-  handleSearch(searchInput.value);
-  applyFilters(); // combined search + filters live
-});
+// Show suggestions while typing
+searchInput.addEventListener("input", () => handleSearch(searchInput.value));
 
-// Apply filters when pressing Enter
+// Apply search when pressing Enter
 searchInput.addEventListener("keydown", (e) => {
   if (e.key === "Enter") {
+    applySearch(searchInput.value);
     suggestionsEl.hidden = true;
-    applyFilters(); // search term + current filters
   }
 });
 
-// Apply filters when clicking Search button
+// Apply search when clicking Search button
 searchBtn.addEventListener("click", () => {
+  applySearch(searchInput.value);
   suggestionsEl.hidden = true;
-  applyFilters(); // search term + current filters
 });
 
 
@@ -497,6 +485,12 @@ document.addEventListener("click", (e) => {
   }
 });
 
+function applySearch(term) {
+  term = term.trim().toLowerCase();
+  if (!term) {
+    applyFilters(); // reset to current idol/category filters
+    return;
+  }
 
   // Filter catalog based on current filters AND search term
   filteredCatalog = catalog.filter(item => {
