--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>K-pop Idol Gallery</title>
+<title>🔍 Idol Searcher</title>
 <style>
   :root {
     --bg: radial-gradient(circle at top, #141414 0%, #0a0a0a 100%);
